# sonos-streamer

./: Cargo.toml
.github/workflows/: rust.yml
docs/: windows-sonos-debug.md
src/: autocalibrate.rs  debug_agent.rs  latency.rs  lib.rs  listener.rs
src/enums/: messages.rs  streaming.rs
src/openhome/: rendercontrol.rs
src/server/: query_params.rs  streaming_server.rs
src/utils/: audiodevices.rs  commandline.rs  configuration.rs  extra_threads.rs  local_ip_address.rs  mod.rs  rwstream.rs  traits.rs  ui_logger.rs  wizard.rs
