[package]
resolver = "3"
authors = ["Claw"]
edition = "2024"
name = "swyh-rs"
version = "1.20.3"
description = "Stream What You Hear written in Rust - Sonos Low Latency Fork"
license = "MIT"
repository = "https://github.com/dheijl/swyh-rs/"
readme = "README.md"
default-run = "swyh-rs-cli"

[profile.release]
strip = true
codegen-units = 1
lto = "thin"

[features]
cli = ["dep:local-ip-address", "dep:dialoguer"]
default = ["cli"]

[[bin]]
name = "swyh-rs-cli"
required-features = ["cli"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
bitflags = "2.11.0"
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.2", features = ["termination"] }
dialoguer = { version = "0.12.0", optional = true, default-features = false, features = ["fuzzy-select"] }
dasp_sample = "0.11.0"
dirs = "6.0.0"
ecow = "0.2.6"
fastrand = "2.4.1"
figura = "2.0.3"
hashbrown = "0.17.0"
htmlescape = "0.3.1"
if-addrs = "0.15.0"
itertools = "0.14.0"
lexopt = "0.3.2"
local-ip-address = { version = "0.6.11", optional = true }
log = { version = "0.4.29", features = ["max_level_trace", "release_max_level_debug", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["local-offset"] }
tiny_http = "0.12.0"
toml = "1.1.2"
ureq = { version = "3.3.0", default-features = false, features = ["charset", "gzip"] }
url = "2.5.8"
wide = "1.2.0"
xml = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi-easy = { version = "0.3.0", default-features = false, features = ["process"] }
winres = "0.1.12"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", default-features = false, features = ["process"] }
